# fibonacci

./: Cargo.toml  README.md
src/: fib.rs  main.rs
