[package]
name = "rust_fibonacci_print"
version = "0.2.0"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }

num-traits = { version = "*"}

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3